@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-19T16:22:13Z",
+  "timestamp" : "2022-07-20T01:23:04Z",
   "count_outdated" : 401,
   "uniques_outdated" : 231,
-  "count" : 426,
-  "uniques" : 245,
+  "count" : 427,
+  "uniques" : 246,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
