@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 4,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2022-07-16T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
