@@ -1,3 +1,10 @@
+2022-07-20T01:23:04Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 231 401 / 245 426
+* notice: next accum: outdated-unq outdated-all / unq all: 231 401 / 246 427
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-19]
+
 2022-07-19T16:22:13Z:
 * notice: last 14d: unq all: 4 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 230 399 / 245 425
